<resources>
    <string name="app_name">AndroidFundamentals2021FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Tracker</string>
    <string name="nav_header_subtitle">Android Fundamentals final project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="add_new_task">Add New Task</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="about_the_app">About the app</string>
    <string name="contact_me">Contact me</string>
    <string name="new_task">New Task</string>
    <string name="all_task_done">All tasks done</string>
    <string name="select_now_the_end_time">Select now the end time</string>
</resources>